Fixed collapsable header to be more responsive

--- a/src/styles/welcome-section.css
+++ b/src/styles/welcome-section.css
@@ -6,7 +6,8 @@
   flex-direction: column;
   justify-content:center;
   align-items: center;
-  height:60vh;
+  height: auto;
+  margin: 10vh 0 10vh 0;
 }
 
 .border-box{
